// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue components > has components 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <script type="module" src="/@vite/client"></script>

    <meta charset="UTF-8">
    <link rel="icon" type="image/svg+xml" href="/vite.svg">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Vite + Vue + TS</title>
  </head>
  <body>
    <div id="app" data-v-app=""><svg><title>My superb logo</title><use xlink:href="/__spritemap#sprite-spiriit"></use></svg><svg><use xlink:href="/__spritemap#sprite-vite"></use></svg><img src="/__spritemap#sprite-spiriit-view" width="118" height="38"><img src="/__spritemap#sprite-vite-view" width="32" height="32"></div>
    <script type="module" src="/main.ts"></script>
  <script type="module" src="/@vite-plugin-svg-spritemap/client__spritemap"></script>

</body></html>"
`;

exports[`vue components > test with warn 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <script type="module" src="/@vite/client"></script>

    <meta charset="UTF-8">
    <link rel="icon" type="image/svg+xml" href="/vite.svg">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Vite + Vue + TS</title>
  </head>
  <body>
    <div id="app" data-v-app=""><svg><title>My superb logo</title><use xlink:href="/__spritemap#sprite-spiriit"></use></svg><svg><use xlink:href="/__spritemap#sprite-vite"></use></svg><!----><!----></div>
    <script type="module" src="/main.ts"></script>
  <script type="module" src="/@vite-plugin-svg-spritemap/client__spritemap"></script>

</body></html>"
`;
